Resolves jumpy text on hover

--- a/app/assets/stylesheets/components/settings.scss
+++ b/app/assets/stylesheets/components/settings.scss
@@ -72,6 +72,10 @@
   }
 }
 
+.app-settings-btn {
+  line-height: 18px;
+}
+
 .app-settings-btn:hover {
   font-size: 1.05rem;
 }
